--- a/app/app/renderer/selector.html
+++ b/app/app/renderer/selector.html
@@ -10,7 +10,7 @@
 
     <!-- Material Design for Bootstrap CSS -->
     <link rel="stylesheet" href="https://unpkg.com/bootstrap-material-design@4.1.1/dist/css/bootstrap-material-design.min.css" integrity="sha384-wXznGJNEXNG1NFsbm0ugrLFMQPWswR3lds2VeinahP8N0zJw9VWSopbjv2x7WCvX" crossorigin="anonymous">
-    <script src="./app/renderer/selector.js"></script>
+    <!--script src="./selector.js"></script-->
     <title>Open vehicle diag</title>
   </head>
   <body>
