Clean Selector UI

--- a/app/app/renderer/selector.html
+++ b/app/app/renderer/selector.html
@@ -11,21 +11,22 @@
     <!-- Material Design for Bootstrap CSS -->
     <link rel="stylesheet" href="https://unpkg.com/bootstrap-material-design@4.1.1/dist/css/bootstrap-material-design.min.css" integrity="sha384-wXznGJNEXNG1NFsbm0ugrLFMQPWswR3lds2VeinahP8N0zJw9VWSopbjv2x7WCvX" crossorigin="anonymous">
     <!--script src="./selector.js"></script-->
-    <title>Open vehicle diag</title>
+    <title>Passthru device selector</title>
   </head>
   <body>
-    <h1>Select passthru device</h1>
-    <select class="browser-default custom-select" id="select-dev">
-    </select>
-    <div class="float-right fixed-bottom mx-auto">
-      <button type="button" class="btn btn-raised btn-primary" id="launch-btn">Launch OVD</button>
+    <div class = "card" style="margin: 5px">
+      <h1 class = "card-header" id="title">TITLE</h1>
+      <div class="card-body" id="body">
+
+      </div>
     </div>
-    
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/popper.js@1.12.6/dist/umd/popper.js" integrity="sha384-fA23ZRQ3G/J53mElWqVJEGJzU0sTs+SvzG8fXVWP+kJQ1lwFAOkcUOysnlKJC33U" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/bootstrap-material-design@4.1.1/dist/js/bootstrap-material-design.js" integrity="sha384-CauSuKpEqAFajSpkdjv3z9t8E7RlpJ1UP0lKM/+NdtSarroVKu069AlsRPKkFBz9" crossorigin="anonymous"></script>
     <script>$(document).ready(function() { $('body').bootstrapMaterialDesign(); });</script>
+    <script src="selector.js"></script>
   </body>
 </html>
