Add new features to OVD
- native library:
1. Add function to get last passthru erroor
2. Add function to connect passthruConnect
3. Add function to call PassthruDisconnect

- Electron
1. Move expensive driver operations to promises, so not to block render thread
2. Add button to test PassthruConnect

--- a/app/app/renderer/main.html
+++ b/app/app/renderer/main.html
@@ -104,6 +104,7 @@
 <!-- Main content -->
 <div class="d-flex justify-content-center align-items-center">
     <h1 class="text-primary">Open ECU Json to start session</h1>
+    <button class="btn btn-outline-danger" id="test_connect">Test connect</button>
 </div>
 
 <!-- Optional JavaScript -->
