--- a/app/app/renderer/main.html
+++ b/app/app/renderer/main.html
@@ -105,6 +105,8 @@
 <div class="d-flex justify-content-center align-items-center">
     <h1 class="text-primary">Open ECU Json to start session</h1>
     <button class="btn btn-outline-danger" id="test_connect">Test connect</button>
+    <button class="btn btn-outline-danger" id="test_filter">Test filter</button>
+    <button class="btn btn-outline-danger" id="test_disconnect">Test disconnect</button>
 </div>
 
 <!-- Optional JavaScript -->
