Begin working on ICED rust app

--- a/app/app/renderer/main.html
+++ b/app/app/renderer/main.html
@@ -106,6 +106,7 @@
     <h1 class="text-primary">Open ECU Json to start session</h1>
     <button class="btn btn-outline-danger" id="test_connect">Test connect</button>
     <button class="btn btn-outline-danger" id="test_filter">Test filter</button>
+    <button class="btn btn-outline-danger" id="test_send">Test Send msg</button>
     <button class="btn btn-outline-danger" id="test_disconnect">Test disconnect</button>
 </div>
 
